touch controls added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,12 @@
       "@/*": ["./src/*"]
     }
   },
+  "typeRoots": [
+    "./node_modules/phaser/types"
+],
+"types": [
+    "Phaser"
+],
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
