--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor/android": "5.1.0",
     "@capacitor/app": "5.0.5",
     "@capacitor/core": "5.1.0",
     "@capacitor/haptics": "5.0.5",
+    "@capacitor/ios": "5.1.0",
     "@capacitor/keyboard": "5.0.5",
     "@capacitor/status-bar": "5.0.5",
     "@ionic/vue": "^7.0.0",
