--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@capacitor/haptics": "5.0.5",
     "@capacitor/ios": "5.1.0",
     "@capacitor/keyboard": "5.0.5",
+    "@capacitor/preferences": "5.0.6",
     "@capacitor/status-bar": "5.0.5",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
